     SSSS     ttt  eeeee llll llll  aaaaa

===========================================================================
                              Release History
===========================================================================

6.3 to 6.3.1 (November 2, 2020)

  * Added basic (entire and single line only) text cut/copy and paste.

  * Added color parameters to 'Custom' palette

  * Some improvements to AVox-USB adaptor functionality:
    - Made serial port used for an AtariVox-USB adaptor editable.
    - Autodetection of serial ports no longer messes up devices plugged
      into other serial ports.

  * Fixed bug with aspect correction and fullscreen mode; snapshots from
    such a mode are now pixel-exact.

  * Fixed crash with missing or incorrectly sized SaveKey data file, and
    with certain functions not working (erase pages, erase entire EEPROM).

  * Fixed bug in ROM launcher, with last ROM selected not being remembered
    when exiting and re-entering a directory.

-Have fun!


6.2.1 to 6.3 (October 7, 2020)

  * Added adjustable autofire.

  * Added 'Dark' UI theme.

  * Extended global hotkeys for debug options.

  * Added option to playback a game using the Time Machine.

  * Allow taking snapshots from within the Time Machine dialog.

  * Added the ability to access most files that Stella uses from within a
    ZIP file. This includes the following:
      - Per-ROM properties file (so one can distribute a ROM and its
        associated properties).
      - Debugger symbol (.sym) and list (.lst) files, etc.
      - Several others, as we extend the support.
    Basically, you are now able to put many files that Stella uses inside
    one ZIP file, and distribute just that file.

  * Extended AtariVox support to handle flow control, so that long phrases
    are no longer corrupted/cut off.  This includes properly supporting the
    2600-daptor II, which is flashable to an AVox-USB converter.
